--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 *{
-	font-family: helvetica;
+	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 	font-weight: lighter;
+	letter-spacing: 2px;
 }
 body{
 	background:white;
@@ -12,7 +13,7 @@ nav{
 	position: fixed;
     height: 109px;
     background: rgba(10,10,20, 0);
-    width: 201px;
+    width: 221px;
     top: 0px;
     left: 0px;
     color: white;
@@ -23,6 +24,20 @@ nav{
   -webkit-background-clip: padding;  
   background-clip: padding-box; */
   
+}
+
+.thumbTitle{
+	position: relative;
+    top: 0px;
+    z-index: 1;
+    color: black;
+    background: white;
+    text-align: left;
+    font-weight: lighter;
+    font-size: 24px;
+    padding: 3%;
+    line-height: 1em;
+    width: 152px;
 }
 
 canvas{
@@ -107,10 +122,10 @@ canvas{
 }
 
 .thumb{
-	position: relative;
+    position: relative;
     width: 105%;
     left: 50%;
-    top: 142px;
+    bottom: -84px;
     transform: translate(-50%,-50%);
 }
 
@@ -133,6 +148,12 @@ canvas{
 	position: relative;
 	bottom:40px;
 }
+
+.openProject{
+	width: 120%;
+    height: 200%;
+}
+
 @media(max-width: 672px){
 
 	.thumb{
